--- a/src/shortam.css
+++ b/src/shortam.css
@@ -1,3 +1,10 @@
+/*
+ * Shortam 0.1
+ * by @nitishkgupta
+ * License: MIT
+ * Github: https://github.com/nitishkgupta/Shortam
+ */
+
 .shortam-alert {padding-left:15px!important;padding: 10px;font-size:20px;font-family: roboto;border-radius: 4px;}
 .shortam-bg-green {background: #4caf50;color: #fff;}
 .shortam-bg-blue {background: #03a9f4;color: #fff;}
